# loicbourgois

./: .gitignore  404.html  404.js  CNAME  DEV.md  README-dev.md  README.md  _go.sh  angular.json  build.sh  conf.js  default-ssl.conf  dev.sh  docker-compose.yml  eggschange.txt  go.sh  index.css  index.html  index.js  loop.js  nginx.conf  package-lock.json  package.json  setup.sh  webgl.js
1024s/: fragment_shader.js  index.html  index.js
a-round-world/: gl.js  index.css  index.html  index.js  m4.js  math.js
arrows-of-time/: conf.js  index.css  index.js  webgl.js
canawee/: canawee.xcf  index.css  index.html  index.js
celements/: README.md  canvas.js  index.css  index.html  index.js  math.js  world.js
celements_old/: canvas.js  index.html  index.js  math.js  world.js
celp/: index.css  index.html  index.js  index0.js  index_3.js
chicken-eggschange/: canvas.js  chicken.xcf  index.css  index.js  sprites.xcf
chicken-exchange/: index.css  index.html  index.js
compute-shader/: gl.js  index.css  index.html  index.js  index_old.html  index_old.js
dap/: README.md  run.sh
decibel/: c0.js  index.css  index.html  index.js  show_config.js  utils.js  wavetables.js
docs/: 1.a28089d4b37268720197.js  3rdpartylicenses.txt  404.html  5.2f0a56b90db5599cd86c.js  5.b43684b4099181fcb4d7.js  index.html  main.581906c9596916c87baf.js  (+9 more)
movie-finder/api/: Cargo.toml  admin.sh  build.sh  config.json  local.sh  staging.sh  superadmin.sh  update_cert.md
movie-finder/api/src/: about.rs  config.rs  data.rs  main.rs  media.rs  random.rs  search.rs  search_review.rs  text.rs
(+487 files in other folders)
